--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "^5.27.5",
     "axios": "^1.6.7",
     "next": "14.1.3",
+    "next-pwa": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
     "styled-components": "^6.1.8"
