--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.7",
     "next": "14.1.3",
     "next-pwa": "^5.6.0",
+    "openai": "^4.28.4",
     "react": "^18",
     "react-dom": "^18",
     "styled-components": "^6.1.8"
