--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
-    "typescript": "^5"
+    "eslint-config-prettier": "^9.1.0",
+    "prettier": "^3.2.5",
+    "typescript": "^5",
+    "typescript-eslint": "^7.2.0"
   }
 }
