--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.27.5",
+    "@types/react-input-autosize": "^2.2.4",
     "axios": "^1.6.7",
+    "framer-motion": "^11.0.14",
     "next": "14.1.3",
     "next-pwa": "^5.6.0",
     "openai": "^4.28.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-input-autosize": "^3.0.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
