--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@tanstack/react-query": "^5.27.5",
     "axios": "^1.6.7",
+    "babel-plugin-styled-components": "^2.1.4",
     "next": "14.1.3",
     "next-pwa": "^5.6.0",
     "openai": "^4.28.4",
     "react": "^18",
     "react-dom": "^18",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "styled-reset": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
