[feat] #8 - 홈화면 타이틀, 인사이트 카드 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,9 @@
     "jsx": "preserve",
     "incremental": true,
     "paths": {
-      "@/*": ["./src/*"]
+      "@api/*": ["./src/api/*"],
+      "@image/*": ["./public/image/*"],
+      "@components/*": ["./src/components/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
