[fix] #8 - @/types 오류 해결, className 중복 수정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,9 +13,11 @@
     "jsx": "preserve",
     "incremental": true,
     "paths": {
+      "@/*": ["./src/*"],
       "@api/*": ["./src/api/*"],
       "@image/*": ["./public/image/*"],
-      "@components/*": ["./src/components/*"]
+      "@components/*": ["./src/components/*"],
+      "@styles/*": ["./src/styles/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
