--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-input-autosize": "^2.2.4",
     "axios": "^1.6.7",
     "babel-plugin-styled-components": "^2.1.4",
+    "dayjs": "^1.11.10",
     "framer-motion": "^11.0.14",
     "next": "14.1.3",
     "next-pwa": "^5.6.0",
