--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,7 +8,7 @@
   "short_name": "리인풋",
   "description": "인사이트 공유 및 리마인더 서비스",
   "share_target": {
-    "action": "/share-target/",
+    "action": "/upload",
     "method": "GET",
     "params": {
       "title": "title",
