--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^18",
     "react-input-autosize": "^3.0.0",
     "styled-components": "^6.1.8",
-    "styled-reset": "^4.5.2"
+    "styled-reset": "^4.5.2",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
