--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-input-autosize": "^3.0.0",
+    "react-textarea-autosize": "^8.5.3",
     "styled-components": "^6.1.8",
     "styled-reset": "^4.5.2",
     "zustand": "^4.5.2"
